chnage in html and style file

--- a/index.html
+++ b/index.html
@@ -5,29 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="section">
         <div class="header_content_one">
-            <div class="h_first">
-                <p>English</p>
-                <p>USD</p>
+            <div class="h_first" style="width: 162px;">
+                <p>English<i class="fas fa-angle-down"></i></p>
+                <p>USD<i class="fas fa-angle-down"></i></p>
             </div>
             <div class="h_second">Kundol</div>
             <div class="h_third">
-                <p>My Account</p>
-                <p>Wishlist</p>
+                <p><i class="fas fa-user-shield"></i> My Account</p>
+                <p><i class="fas fa-heart"></i>Wishlist</p>
                 <p>$0.00</p>
             </div>
         </div>
 
         <div class="header_content_two">
-            <p style="color: peru;">Home</p>
-            <p>shop</p>
-            <p>Product</p>
-            <p>Element</p>
-            <p>Pages</p>
+            <p style="color: peru;">Home<i class="fas fa-angle-down"></i></p>
+            <p>shop<i class="fas fa-angle-down"></i></p>
+            <p>Product<i class="fas fa-angle-down"></i></p>
+            <p>Element<i class="fas fa-angle-down"></i></p>
+            <p>Pages<i class="fas fa-angle-down"></i></p>
         </div>
     </div>
 
@@ -132,6 +133,55 @@
             </div>
         </div>
     </div>
+
+    <div class="section_news">
+        <h1>Sign up for Latest news </h1>
+        <div class="container_form">
+            <input class="new_input" type="email" name="name" placeholder="Enter your email address here.....">
+            <button class="news_btn">Subscribe</button>
+        </div>
+    </div>
     
+    <div class="section_footer">
+        <div class="container_footer">
+            <div class="footer_div">
+                <h2>Contact us </h2>
+                <p>We are a team of designer and developers who <br>creates high quality premium boostrap <br>themes</p>
+                <p><i class="fas fa-store"></i>kundol Demo store demo store </p>
+                <p><i class="fas fa-phone-volume"></i> 9887-152-435</p>
+                <p><i class="fas fa-envelope-open"></i>Email@yourcompanyname.com</p>
+            </div>
+            <div class="footer_div">
+             <h2>Categories</h2>
+             <p>Jewelary</p>
+             <p>Collactions</p>
+             <p>Gold Jewelary</p>
+             <p>Diamon jewelary</p>
+             <p>Nneckless</p>
+            </div>
+            <div class="footer_div">
+                <h2>MAIN MENU</h2>
+                <p>Home</p>
+                <p>Shop</p>
+                <p> Top products</p>
+                <p>Product Page</p>
+                <p>Page/Layouts</p>
+            </div>
+            <div class="footer_div">
+                <h2>Instagram</h2>
+                <div class="insta_1">
+                    <div class="insta_1_div"></div>
+                    <div class="insta_1_div"></div>
+                    <div class="insta_1_div"></div>
+                </div>
+                <div class="insta_2">
+                    <div class="insta_2_div"></div>
+                    <div class="insta_2_div"></div>
+                    <div class="insta_2_div"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
