changing in mobile responive

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
     <div class="section_ring">
         <div class="diamond_container">
-            <div class="diamond_left" style="order: 2;"></div>
-            <div class="diamond_right" style="order: 1;">
+            <div class="diamond_left"></div>
+            <div class="diamond_right">
              
                 <h2>Lab grow <span>Diamonds</span></h2>
                 <p>Discover the exceptional beauty ,qualty and sparkle of our lab grown diamonds</p>
